# Catch_Up_Project

./: .gitignore  README.md  pyproject.toml
app/: main.py  main2.py  main_test.py
app/utils/: clear_tmp.py  content_generation.py  graph_gen.py  lida_main.py  ppt_generation.py  template.pptx  ui_config.py
app/utils/graphic/: chart_generation.py
data/: Survey_Results.csv
tmp/: slide_1.mmd  slide_2.mmd  slide_3.mmd
